--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,14 @@
 hs_err_pid*
 
 # End of https://www.gitignore.io/api/java
+/Stewie/nbproject/private/
+/Stewie/build/
+/Difference/nbproject/private/
+/Difference/build/
+/MuchBetter/nbproject/private/
+/MuchBetter/build/
+/Egg/nbproject/private/
+/Egg/build/
+/Hello/nbproject/private/
+/Hello/build/
+/Mantra/nbproject/private/
